--- a/joao.html
+++ b/joao.html
@@ -13,6 +13,6 @@
   </ul>
   <a href="https://www.youtube.com/watch?v=bHUvykXL8Og&t=1083s" target="_blank">video that i like</a>
   <br />
-  <img src="https://commons.wikimedia.org/wiki/File:Aging_Anonymous.jpg" alt="Anonymous" />
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Aging_Anonymous.jpg/500px-Aging_Anonymous.jpg?20160603221349" alt="Anonymous" />
 </body>
 </html>
