--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <p>Conheça mais sobre cada integrante:</p>
   <ul>
     <li><a href="https://xunKnownmage.github.io/pagina-grupo05/Marcos.html">Marcos</a></li>
+    <li><a href="https://xunknownmage.github.io/pagina-grupo05/joao.html">João</a></li>
   </ul>
 </body>
 </html>
